Some backend stuff for serving ESP32 binary files.
