# api_spec/openapi_v2.yaml
@@ -773,6 +773,141 @@ paths:
                           details:
                             items:
                               example: "Error retrieving firmware binary."
+  /api/v2/subcontrollers/firmware/esp32/bootloader:
+    get:
+      tags:
+        - "Subcontroller Firmware"
+      summary: Get the ESP32 bootloader binary.
+      description: >
+        Streams the ESP32 bootloader binary for download.
+      responses:
+        200:
+          description: "Success"
+          headers:
+            Content-Length:
+              description: "The size of the content in bytes."
+              schema:
+                type: string
+                example: "12345678"
+            Content-Disposition:
+              description: "Indicates that the content is a file attachment."
+              schema:
+                type: string
+                example: "attachment; filename=\"bootloader.bin\""
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+        500:
+          description: "Internal server error"
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/ErrorResponse"
+                  - properties:
+                      statusCode:
+                        example: 500
+                      error:
+                        properties:
+                          name:
+                            example: "Internal Server Error"
+                          url:
+                            example: "/api/v2/subcontrollers/firmware/esp32/bootloader"
+                          details:
+                            items:
+                              example: "Error retrieving bootloader binary."
+  /api/v2/subcontrollers/firmware/esp32/partitions:
+    get:
+      tags:
+        - "Subcontroller Firmware"
+      summary: Get the ESP32 partitions binary.
+      description: >
+        Streams the ESP32 partitions binary for download.
+      responses:
+        200:
+          description: "Success"
+          headers:
+            Content-Length:
+              description: "The size of the content in bytes."
+              schema:
+                type: string
+                example: "12345678"
+            Content-Disposition:
+              description: "Indicates that the content is a file attachment."
+              schema:
+                type: string
+                example: "attachment; filename=\"partitions.bin\""
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+        500:
+          description: "Internal server error"
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/ErrorResponse"
+                  - properties:
+                      statusCode:
+                        example: 500
+                      error:
+                        properties:
+                          name:
+                            example: "Internal Server Error"
+                          url:
+                            example: "/api/v2/subcontrollers/firmware/esp32/partitions"
+                          details:
+                            items:
+                              example: "Error retrieving partitions binary."
+  /api/v2/subcontrollers/firmware/esp32/application:
+    get:
+      tags:
+        - "Subcontroller Firmware"
+      summary: Get the ESP32 application binary.
+      description: >
+        Streams the ESP32 application binary for download.
+      responses:
+        200:
+          description: "Success"
+          headers:
+            Content-Length:
+              description: "The size of the content in bytes."
+              schema:
+                type: string
+                example: "12345678"
+            Content-Disposition:
+              description: "Indicates that the content is a file attachment."
+              schema:
+                type: string
+                example: "attachment; filename=\"boot_app0.bin\""
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+        500:
+          description: "Internal server error"
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/ErrorResponse"
+                  - properties:
+                      statusCode:
+                        example: 500
+                      error:
+                        properties:
+                          name:
+                            example: "Internal Server Error"
+                          url:
+                            example: "/api/v2/subcontrollers/firmware/esp32/application"
+                          details:
+                            items:
+                              example: "Error retrieving application binary."
   /api/v2/subcontrollers/firmware/esp32/ota-update/{deviceId}:
     post:
       tags:
